# finn

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.specs/codebase/: API.md  ARCHITECTURE.md  DATABASE.md  STACK.md  STRUCTURE.md  TESTING.md  finledger_design_system_final.html
.specs/features/v0-migration/: mockup.html  spec.md  tasks.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
src/: db.js  index.html  main.js  styles.css  utils.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: backup.rs  categorias.rs  mod.rs  oauth.rs  recorrentes.rs  schema.rs  token_store.rs  transacoes.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/db/: mod.rs  schema.rs  test_utils.rs
src-tauri/src/infrastructure/vault/: mod.rs  token_store.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/backup/: mod.rs  models.rs  oauth.rs
src-tauri/src/modules/categories/: mod.rs
src-tauri/src/modules/metas/: mod.rs
src-tauri/src/modules/recurring/: mod.rs
src-tauri/src/modules/reserves/: mod.rs
src-tauri/src/modules/transactions/: export.rs  mod.rs
src/components/: drawer.css  drawer.js  recorrente-drawer.css  recorrente-drawer.js  sidebar.js
src/core/: db.js  router.js  toast.js
src/screens/: backup.css  backup.js  categorias.css  categorias.js  dashboard.css  dashboard.js  importar.css  importar.js  recorrentes.css  recorrentes.js  transacoes.css  transacoes.js
src/shared/: sidebar.js
(+30 files in other folders)
