[package]
name = "finn"
version = "0.1.0"
description = "Finn - Finanças Pessoais"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "finn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
url = "2.5"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
log = "0.4"
env_logger = "0.11"

